[package]
name = "rbx"
version = "0.0.0"
authors = ["7ap"]
edition = "2021"
description = "🎮 Rust \"bindings\" for Roblox."
documentation = "https://docs.rs/rbx"
repository = "https://github.com/7ap/rbx/"
license = "MIT"

[[example]]
name = "studio"
path = "./examples/studio/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
log = "0.4"
pelite = "0.10"

[dev-dependencies]
env_logger = "0.10"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
]
