[package]
name = "rbx"
version = "0.0.0"
authors = ["7ap"]
edition = "2021"
description = "🎮 Rust \"bindings\" for Roblox."
documentation = "https://docs.rs/rbx"
repository = "https://github.com/7ap/rbx/"
license = "MIT"

[dependencies]
libc = "0.2"
log = "0.4"

[dev-dependencies]
env_logger = "0.10"
